# pro-1

./: .env  .gitignore  db.sqlite3  package-lock.json  pyproject.toml
app/: models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js
frontend/src/router/: index.js
frontend/src/services/: api.js  api.services.js  token.service.js
frontend/src/views/: Home.vue  Login.vue  NotFound.vue
project/: settings.py  urls.py
